--- a/Star wars/Code/index.html
+++ b/Star wars/Code/index.html
@@ -2,11 +2,79 @@
 <html>
 <head>
     <link rel="stylesheet" href="estilo.css"/>
-    <title>Star Wars Encyclopedia</title>
+    <title>Star Wars Enciclopedia</title>
+    <link rel="icon" href="../../Imagenes/logo.png" type="image/png">
 </head>
 <body>
-    <div class="Main__header">
-        <h1 class="Main_header__h1">Hello Star Wars</h1>
-    </div>
+    <header class="Header__page">
+        <h1 class="Title">Enciclopedia Star Wars</h1>
+        <p class="Paragraphy">Este sitio esta dedicado a un abrir de boca de <span id="Palabra">Star Wars</span>, donde
+        se resalta los detalles de las peliculas como los personajes y la historia..</p>
+        <nav class="Navigation__bar">
+            <ul class="Navigation__bar__list">
+                <li id="List__content"><a href="../What is it about/index.html" class="Navigation__bar__Link">What is it about?</a></li><hr>
+                <li id="List__content"><a href="../Characters/index.html" class="Navigation__bar__Link">Characters</a></li><hr>
+                <li id="List__content"><a href="../History/index.html" class="Navigation__bar__Link">History</a></li><hr>
+                <li id="List__content"><a href="maiton: joseasantana05@gmail.com" class="Navigation__bar__Link">Help</a></li>
+            </ul>
+        </nav>
+    </header>
+    <h2 class="Title__page">Detalles de las Peliculas</h2>
+    <main class="Main__page">
+        <section class="Section__page">
+            <img src="../../Imagenes/amenaza.png" alt="No se puede ver la imagen" class="Imagen__peli">
+            <p class="Paragraphy__page">En el año 32 antes de la Batalla de Yavin (es decir, 32 años antes de Una Nueva Esperanza) una disputa entre la Federación de Comercio y la República Galáctica causada por los impuestos sobre las rutas comerciales de los Territorios del Borde Exterior, 
+                ha llevado a la Federación de Comercio a imponer un bloqueo comercial al planeta Naboo.
+                Entonces, el Canciller Supremo Valorum nombra en secreto a dos caballeros Jedi: Obi-Wan Kenobi y Qui-Gon Jinn 
+                como embajadores a la nave insignia de la Federación de Comercio, la Saak'ak, con el fin de reunirse con el Virrey Nute 
+                Gunray y así obligarlo a resolver la disputa. Ignoran, sin embargo, que el virrey está aliado con el malvado Darth Sidious, 
+                que en secreto le ordena invadir Naboo y eliminar a los caballeros Jedi en cuanto lleguen.</p>
+        </section>
+        <section class="Section__page">
+            <img src="../../Imagenes/ataque.png" alt="No se puede ver la imagen" class="Imagen__peli">
+            <p class="Paragraphy__page">En el año 32 antes de la Batalla de Yavin (es decir, 32 años antes de Una Nueva Esperanza) una disputa entre la Federación de Comercio y la República Galáctica causada por los impuestos sobre las rutas comerciales de los Territorios del Borde Exterior, 
+                ha llevado a la Federación de Comercio a imponer un bloqueo comercial al planeta Naboo.
+                Entonces, el Canciller Supremo Valorum nombra en secreto a dos caballeros Jedi: Obi-Wan Kenobi y Qui-Gon Jinn 
+                como embajadores a la nave insignia de la Federación de Comercio, la Saak'ak, con el fin de reunirse con el Virrey Nute 
+                Gunray y así obligarlo a resolver la disputa. Ignoran, sin embargo, que el virrey está aliado con el malvado Darth Sidious, 
+                que en secreto le ordena invadir Naboo y eliminar a los caballeros Jedi en cuanto lleguen.</p>
+        </section>
+        <section class="Section__page">
+            <img src="../../Imagenes/venganza.png" alt="No se puede ver la imagen" class="Imagen__peli">
+            <p class="Paragraphy__page">En el año 32 antes de la Batalla de Yavin (es decir, 32 años antes de Una Nueva Esperanza) una disputa entre la Federación de Comercio y la República Galáctica causada por los impuestos sobre las rutas comerciales de los Territorios del Borde Exterior, 
+                ha llevado a la Federación de Comercio a imponer un bloqueo comercial al planeta Naboo.
+                Entonces, el Canciller Supremo Valorum nombra en secreto a dos caballeros Jedi: Obi-Wan Kenobi y Qui-Gon Jinn 
+                como embajadores a la nave insignia de la Federación de Comercio, la Saak'ak, con el fin de reunirse con el Virrey Nute 
+                Gunray y así obligarlo a resolver la disputa. Ignoran, sin embargo, que el virrey está aliado con el malvado Darth Sidious, 
+                que en secreto le ordena invadir Naboo y eliminar a los caballeros Jedi en cuanto lleguen.</p>
+        </section>
+        <section class="Section__page">
+            <img src="../../Imagenes/esperanza.png" alt="No se puede ver la imagen" class="Imagen__peli">
+            <p class="Paragraphy__page">En el año 32 antes de la Batalla de Yavin (es decir, 32 años antes de Una Nueva Esperanza) una disputa entre la Federación de Comercio y la República Galáctica causada por los impuestos sobre las rutas comerciales de los Territorios del Borde Exterior, 
+                ha llevado a la Federación de Comercio a imponer un bloqueo comercial al planeta Naboo.
+                Entonces, el Canciller Supremo Valorum nombra en secreto a dos caballeros Jedi: Obi-Wan Kenobi y Qui-Gon Jinn 
+                como embajadores a la nave insignia de la Federación de Comercio, la Saak'ak, con el fin de reunirse con el Virrey Nute 
+                Gunray y así obligarlo a resolver la disputa. Ignoran, sin embargo, que el virrey está aliado con el malvado Darth Sidious, 
+                que en secreto le ordena invadir Naboo y eliminar a los caballeros Jedi en cuanto lleguen.</p>
+        </section>
+        <section class="Section__page">
+            <img src="../../Imagenes/imperio.jpg" alt="No se puede ver la imagen" class="Imagen__peli">
+            <p class="Paragraphy__page">En el año 32 antes de la Batalla de Yavin (es decir, 32 años antes de Una Nueva Esperanza) una disputa entre la Federación de Comercio y la República Galáctica causada por los impuestos sobre las rutas comerciales de los Territorios del Borde Exterior, 
+                ha llevado a la Federación de Comercio a imponer un bloqueo comercial al planeta Naboo.
+                Entonces, el Canciller Supremo Valorum nombra en secreto a dos caballeros Jedi: Obi-Wan Kenobi y Qui-Gon Jinn 
+                como embajadores a la nave insignia de la Federación de Comercio, la Saak'ak, con el fin de reunirse con el Virrey Nute 
+                Gunray y así obligarlo a resolver la disputa. Ignoran, sin embargo, que el virrey está aliado con el malvado Darth Sidious, 
+                que en secreto le ordena invadir Naboo y eliminar a los caballeros Jedi en cuanto lleguen.</p>
+        </section>
+        <section class="Section__page">
+            <img src="../../Imagenes/regreso.png" alt="No se puede ver la imagen" class="Imagen__peli">
+            <p class="Paragraphy__page">En el año 32 antes de la Batalla de Yavin (es decir, 32 años antes de Una Nueva Esperanza) una disputa entre la Federación de Comercio y la República Galáctica causada por los impuestos sobre las rutas comerciales de los Territorios del Borde Exterior, 
+                ha llevado a la Federación de Comercio a imponer un bloqueo comercial al planeta Naboo.
+                Entonces, el Canciller Supremo Valorum nombra en secreto a dos caballeros Jedi: Obi-Wan Kenobi y Qui-Gon Jinn 
+                como embajadores a la nave insignia de la Federación de Comercio, la Saak'ak, con el fin de reunirse con el Virrey Nute 
+                Gunray y así obligarlo a resolver la disputa. Ignoran, sin embargo, que el virrey está aliado con el malvado Darth Sidious, 
+                que en secreto le ordena invadir Naboo y eliminar a los caballeros Jedi en cuanto lleguen.</p>
+        </section>
+    </main>
 </body>
 </html>
