La maravilla de los enlaces jejej

--- a/Star wars/Code/index.html
+++ b/Star wars/Code/index.html
@@ -21,6 +21,8 @@
     </header>
     <h2 class="Title__page">Detalles de las Peliculas</h2>
     <main class="Main__page">
+
+        <a href="" class="Pelicula__Link">
         <section class="Section__page">
             <img src="../../Imagenes/amenaza.png" alt="No se puede ver la imagen" class="Imagen__peli">
             <p class="Paragraphy__page">En el año 32 antes de la Batalla de Yavin (es decir, 32 años antes de Una Nueva Esperanza) una disputa entre la Federación de Comercio y la República Galáctica causada por los impuestos sobre las rutas comerciales de los Territorios del Borde Exterior, 
@@ -29,7 +31,9 @@
                 como embajadores a la nave insignia de la Federación de Comercio, la Saak'ak, con el fin de reunirse con el Virrey Nute 
                 Gunray y así obligarlo a resolver la disputa. Ignoran, sin embargo, que el virrey está aliado con el malvado Darth Sidious, 
                 que en secreto le ordena invadir Naboo y eliminar a los caballeros Jedi en cuanto lleguen.</p>
-        </section>
+        </section></a>
+
+        <a href="" class="Pelicula__Link">
         <section class="Section__page">
             <img src="../../Imagenes/ataque.png" alt="No se puede ver la imagen" class="Imagen__peli">
             <p class="Paragraphy__page">En el año 32 antes de la Batalla de Yavin (es decir, 32 años antes de Una Nueva Esperanza) una disputa entre la Federación de Comercio y la República Galáctica causada por los impuestos sobre las rutas comerciales de los Territorios del Borde Exterior, 
@@ -38,7 +42,9 @@
                 como embajadores a la nave insignia de la Federación de Comercio, la Saak'ak, con el fin de reunirse con el Virrey Nute 
                 Gunray y así obligarlo a resolver la disputa. Ignoran, sin embargo, que el virrey está aliado con el malvado Darth Sidious, 
                 que en secreto le ordena invadir Naboo y eliminar a los caballeros Jedi en cuanto lleguen.</p>
-        </section>
+        </section></a>
+
+        <a href="" class="Pelicula__Link">
         <section class="Section__page">
             <img src="../../Imagenes/venganza.png" alt="No se puede ver la imagen" class="Imagen__peli">
             <p class="Paragraphy__page">En el año 32 antes de la Batalla de Yavin (es decir, 32 años antes de Una Nueva Esperanza) una disputa entre la Federación de Comercio y la República Galáctica causada por los impuestos sobre las rutas comerciales de los Territorios del Borde Exterior, 
@@ -47,7 +53,9 @@
                 como embajadores a la nave insignia de la Federación de Comercio, la Saak'ak, con el fin de reunirse con el Virrey Nute 
                 Gunray y así obligarlo a resolver la disputa. Ignoran, sin embargo, que el virrey está aliado con el malvado Darth Sidious, 
                 que en secreto le ordena invadir Naboo y eliminar a los caballeros Jedi en cuanto lleguen.</p>
-        </section>
+        </section></a>
+
+        <a href="" class="Pelicula__Link">
         <section class="Section__page">
             <img src="../../Imagenes/esperanza.png" alt="No se puede ver la imagen" class="Imagen__peli">
             <p class="Paragraphy__page">En el año 32 antes de la Batalla de Yavin (es decir, 32 años antes de Una Nueva Esperanza) una disputa entre la Federación de Comercio y la República Galáctica causada por los impuestos sobre las rutas comerciales de los Territorios del Borde Exterior, 
@@ -56,7 +64,9 @@
                 como embajadores a la nave insignia de la Federación de Comercio, la Saak'ak, con el fin de reunirse con el Virrey Nute 
                 Gunray y así obligarlo a resolver la disputa. Ignoran, sin embargo, que el virrey está aliado con el malvado Darth Sidious, 
                 que en secreto le ordena invadir Naboo y eliminar a los caballeros Jedi en cuanto lleguen.</p>
-        </section>
+        </section></a>
+
+        <a href="" class="Pelicula__Link">
         <section class="Section__page">
             <img src="../../Imagenes/imperio.jpg" alt="No se puede ver la imagen" class="Imagen__peli">
             <p class="Paragraphy__page">En el año 32 antes de la Batalla de Yavin (es decir, 32 años antes de Una Nueva Esperanza) una disputa entre la Federación de Comercio y la República Galáctica causada por los impuestos sobre las rutas comerciales de los Territorios del Borde Exterior, 
@@ -65,7 +75,9 @@
                 como embajadores a la nave insignia de la Federación de Comercio, la Saak'ak, con el fin de reunirse con el Virrey Nute 
                 Gunray y así obligarlo a resolver la disputa. Ignoran, sin embargo, que el virrey está aliado con el malvado Darth Sidious, 
                 que en secreto le ordena invadir Naboo y eliminar a los caballeros Jedi en cuanto lleguen.</p>
-        </section>
+        </section></a>
+        
+        <a href="" class="Pelicula__Link">
         <section class="Section__page">
             <img src="../../Imagenes/regreso.png" alt="No se puede ver la imagen" class="Imagen__peli">
             <p class="Paragraphy__page">En el año 32 antes de la Batalla de Yavin (es decir, 32 años antes de Una Nueva Esperanza) una disputa entre la Federación de Comercio y la República Galáctica causada por los impuestos sobre las rutas comerciales de los Territorios del Borde Exterior, 
@@ -74,7 +86,7 @@
                 como embajadores a la nave insignia de la Federación de Comercio, la Saak'ak, con el fin de reunirse con el Virrey Nute 
                 Gunray y así obligarlo a resolver la disputa. Ignoran, sin embargo, que el virrey está aliado con el malvado Darth Sidious, 
                 que en secreto le ordena invadir Naboo y eliminar a los caballeros Jedi en cuanto lleguen.</p>
-        </section>
+        </section></a>
     </main>
 </body>
 </html>
