Poniendo mas cosas a mi portafolio

--- a/Portafolio/index.html
+++ b/Portafolio/index.html
@@ -13,7 +13,8 @@
             <ul class="Header__page__List">
                 <li class="Header__page__List__cont"><a href="#Quien_Soy?" class="Header__page__Link">Quien Soy</a></li><hr>
                 <li class="Header__page__List__cont"><a href="" class="Header__page__Link">Contacto</a></li><hr>
-                <li class="Header__page__List__cont"><a href="" class="Header__page__Link">Comentario</a></li>
+                <li class="Header__page__List__cont"><a href="#Comentario" class="Header__page__Link">Comentario</a></li><hr>
+                <li class="Header__page__List__cont"><a href="#Proyectos" class="Header__page__Link">Proyectos</a></li>
             </ul>
         </nav>
     </header>
@@ -28,6 +29,7 @@
             <a href="https://github.com/JoSantana0005" target="_blank" nofollow noreferrer noopener><img src="../Imagenes/GitHub.png" alt="No se puede ver la imagen" class="article__page__Imagen"></a>
             <a href="https://wa.me/qr/LNI4VTUXIJLAF1" target="_blank" nofollow noreferrer noopener><img src="../Imagenes/Whatsapp.png" alt="No se puede ver la imagen" class="article__page__Imagen"></a>
         </article>
+        <hr class="Line__main">
         <h2 id="Quien_Soy?" class="Main__Title__Section">Quien Soy?</h2>
         <section class="Sections__Main">
             <article class="Article__Biografia">
@@ -47,6 +49,58 @@
                 <h3 class="Section__Biografia__Title">Biografia</h3>
                 <p class="Section__Biografia__paragraphy">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non aut voluptatum, 
                 ipsum dolor et delectus dolores natus animi illum, unde, impedit rem. Atque corrupti pariatur, inventore hic reiciendis error sed?</p>
+            </article>
+        </section>
+        <hr class="Line__main">
+        <h2 class="Main__Title__Section" id="Comentario">Comentarios</h2>
+        <form class="Main__form__page">
+            <fieldset class="Form__page__file">
+                <div class="Form__page__div">
+                    <textarea placeholder="Ingrese su comentario" class="Form__page__textarea"  required></textarea>
+                </div>
+                <div class="Form__page__div">
+                    <input type="submit" class="Form__page__input" value="Envie su comentario">
+                </div>
+            </fieldset>
+        </form>
+        <hr class="Line__main">
+        <h2 class="Main__Title__Section" id="Proyectos">Proyectos</h2>
+        <section class="Section__Proyects">
+            <article class="Article__Proyects">
+                <a href="" class="Article__Link">
+                    <img src="../Imagenes/ataque.png" class="Article__Proyects__Imagen">
+                    <h3 class="Article__Title">Enciclopedia de Star Wars</h3>
+                    <p class="Article__Proyects__paragraphy">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate maiores, 
+                        beatae ad aspernatur molestias inventore eaque fugiat amet a illo temporibus iste vel mollitia qui, 
+                        alias saepe quidem, corporis sequi!</p>
+                </a>
+            </article>
+            <article class="Article__Proyects">
+                <a href="" class="Article__Link">
+                    <img src="../Imagenes/ataque.png" class="Article__Proyects__Imagen">
+                    <h3 class="Article__Title">Enciclopedia de Star Wars</h3>
+                    <p class="Article__Proyects__paragraphy">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate maiores, 
+                        beatae ad aspernatur molestias inventore eaque fugiat amet a illo temporibus iste vel mollitia qui, 
+                        alias saepe quidem, corporis sequi!</p>
+                </a>
+            </article>
+            <article class="Article__Proyects">
+                <a href="" class="Article__Link">
+                    <img src="../Imagenes/ataque.png" class="Article__Proyects__Imagen">
+                    <h3 class="Article__Title">Enciclopedia de Star Wars</h3>
+                    <p class="Article__Proyects__paragraphy">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate maiores, 
+                        beatae ad aspernatur molestias inventore eaque fugiat amet a illo temporibus iste vel mollitia qui, 
+                        alias saepe quidem, corporis sequi!</p>
+                </a>
+            </article>
+            <article class="Article__Proyects">
+                <a href="" class="Article__Link">
+                    <img src="../Imagenes/ataque.png" class="Article__Proyects__Imagen">
+                    <h3 class="Article__Title">Enciclopedia de Star Wars</h3>
+                    <p class="Article__Proyects__paragraphy">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate maiores, 
+                        beatae ad aspernatur molestias inventore eaque fugiat amet a illo temporibus iste vel mollitia qui, 
+                        alias saepe quidem, corporis sequi!</p>
+                </a>
             </article>
         </section>
     </main>
