It's prettier than before, my portfolio is fresher.

--- a/Portafolio/index.html
+++ b/Portafolio/index.html
@@ -3,105 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portafolio</title>
-    <link rel="icon" href="../Imagenes/briefcase-flat-design-long-shadow-icon-portfolio-silhouette-symbol-vector.jpg" type="image/jpg">
+    <title>José Santana</title>
+    <link rel="stylesheet" href="fonts.css">
     <link rel="stylesheet" href="estilo.css">
+    <link rel="icon" href="https://img.freepik.com/vector-premium/logotipo-corona-letra-j-logotipo-corona-plantilla-letra-j-estrella-moda-belleza-signo-lujo-elegante_754537-659.jpg" 
+    type="image/jpg">
 </head>
 <body>
-    <header class="Header__page">
-        <nav class="Header__page__nav">
-            <ul class="Header__page__List">
-                <li class="Header__page__List__cont"><a href="#Quien_Soy?" class="Header__page__Link">Quien Soy</a></li><hr>
-                <li class="Header__page__List__cont"><a href="" class="Header__page__Link">Contacto</a></li><hr>
-                <li class="Header__page__List__cont"><a href="#Comentario" class="Header__page__Link">Comentario</a></li><hr>
-                <li class="Header__page__List__cont"><a href="#Proyectos" class="Header__page__Link">Proyectos</a></li>
+    <header class="Header">
+        <nav class="Navigator__bar">
+            <ul class="Navigator__bar List">
+                <li class="List List__cont"><a href="" class="List__cont Link">HOME</a></li>
+                <li class="List List__cont"><a href="#ABOUT" class="List__cont Link">ABOUT</a></li>
+                <li class="List List__cont"><a href="" class="List__cont Link">PROJECT</a></li>
+                <li class="List List__cont"><a href="mailton:joseasantana05@gmail.com" class="List__cont Link">CONTACT</a></li>
             </ul>
         </nav>
     </header>
-    <main class="Main__page">
-        <img src="../Imagenes/logoJose.png" alt="No se puede ver la imagen" class="Main__page__Imagen">
-        <h2 class="Main__page__Title">José.A.Santana</h2>
-        <p class="Main__page__paragraphy">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, numquam illo, 
-            id error eligendi natus maiores accusantium nostrum sequi sapiente incidunt aspernatur iure architecto? 
-            Blanditiis tenetur facere magnam veniam natus.</p>
-        <article class="article__page">
-            <a href="https://www.instagram.com/who_is_jose_santana?igsh=MXRxZnhlejBhM3Z6cQ==" target="_blank"><img src="../Imagenes/Instagram.png" alt="No se puede ver la imagen" class="article__page__Imagen"></a>
-            <a href="https://github.com/JoSantana0005" target="_blank" nofollow noreferrer noopener><img src="../Imagenes/GitHub.png" alt="No se puede ver la imagen" class="article__page__Imagen"></a>
-            <a href="https://wa.me/qr/LNI4VTUXIJLAF1" target="_blank" nofollow noreferrer noopener><img src="../Imagenes/Whatsapp.png" alt="No se puede ver la imagen" class="article__page__Imagen"></a>
-        </article>
-        <hr class="Line__main">
-        <h2 id="Quien_Soy?" class="Main__Title__Section">Quien Soy?</h2>
-        <section class="Sections__Main">
-            <article class="Article__Biografia">
-                <img src="../Imagenes/amenaza.png" alt="No se puede ver la imagen" class="Article__Biografia__Image">
-                <h3 class="Section__Biografia__Title">Biografia</h3>
-                <p class="Section__Biografia__paragraphy">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non aut voluptatum, 
-                ipsum dolor et delectus dolores natus animi illum, unde, impedit rem. Atque corrupti pariatur, inventore hic reiciendis error sed?</p>
-            </article>
-            <article class="Article__Biografia">
-                <img src="../Imagenes/venganza.png" alt="No se puede ver la imagen" class="Article__Biografia__Image">
-                <h3 class="Section__Biografia__Title">Biografia</h3>
-                <p class="Section__Biografia__paragraphy">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non aut voluptatum, 
-                ipsum dolor et delectus dolores natus animi illum, unde, impedit rem. Atque corrupti pariatur, inventore hic reiciendis error sed?</p>
-            </article>
-            <article class="Article__Biografia">
-                <img src="../Imagenes/esperanza.png" alt="No se puede ver la imagen" class="Article__Biografia__Image">
-                <h3 class="Section__Biografia__Title">Biografia</h3>
-                <p class="Section__Biografia__paragraphy">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non aut voluptatum, 
-                ipsum dolor et delectus dolores natus animi illum, unde, impedit rem. Atque corrupti pariatur, inventore hic reiciendis error sed?</p>
-            </article>
+    <main class="Main">
+        <section class="Section__Main">
+            <h1 class="Title">Jose.A Santana</h1>
+            <p class="paragraphy__Title">
+                web developer and developer in backend</p>
+            <ul class="List__Main">
+                <li class="List__Main List__cont"><a href="https://www.instagram.com/santana05.js?utm_source=qr&igsh=MXRxZnhlejBhM3Z6cQ==" nofollow noopener nooferrer><img src="../Imagenes/Instagram.png" alt="No se puede ver la Imagen" class="Imagen__List"></a></li>
+                <li class="List__Main List__cont"><a href="https://github.com/JoSantana0005" nofollow noopener nooferrer><img src="../Imagenes/GitHub.png" alt="No se puede ver la Imagen" class="Imagen__List"></a></li>
+                <li class="List__Main List__cont"><a href="https://wa.me/qr/LNI4VTUXIJLAF1" nofollow noopener nooferrer><img src="../Imagenes/Whatsapp.png" alt="No se puede ver la Imagen" class="Imagen__List"></a></li>
+                <li class="List__Main List__cont"><a href="" nofollow noopener nooferrer><img src="../Imagenes/twitter.png" alt="No se puede ver la Imagen" class="Imagen__List"></a></li>
+            </ul>
         </section>
-        <hr class="Line__main">
-        <h2 class="Main__Title__Section" id="Comentario">Comentarios</h2>
-        <form class="Main__form__page">
-            <fieldset class="Form__page__file">
-                <div class="Form__page__div">
-                    <textarea placeholder="Ingrese su comentario" class="Form__page__textarea"  required></textarea>
-                </div>
-                <div class="Form__page__div">
-                    <input type="submit" class="Form__page__input" value="Envie su comentario">
-                </div>
-            </fieldset>
-        </form>
-        <hr class="Line__main">
-        <h2 class="Main__Title__Section" id="Proyectos">Proyectos</h2>
-        <section class="Section__Proyects">
-            <article class="Article__Proyects">
-                <a href="" class="Article__Link">
-                    <img src="../Imagenes/ataque.png" class="Article__Proyects__Imagen">
-                    <h3 class="Article__Title">Enciclopedia de Star Wars</h3>
-                    <p class="Article__Proyects__paragraphy">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate maiores, 
-                        beatae ad aspernatur molestias inventore eaque fugiat amet a illo temporibus iste vel mollitia qui, 
-                        alias saepe quidem, corporis sequi!</p>
-                </a>
-            </article>
-            <article class="Article__Proyects">
-                <a href="" class="Article__Link">
-                    <img src="../Imagenes/ataque.png" class="Article__Proyects__Imagen">
-                    <h3 class="Article__Title">Enciclopedia de Star Wars</h3>
-                    <p class="Article__Proyects__paragraphy">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate maiores, 
-                        beatae ad aspernatur molestias inventore eaque fugiat amet a illo temporibus iste vel mollitia qui, 
-                        alias saepe quidem, corporis sequi!</p>
-                </a>
-            </article>
-            <article class="Article__Proyects">
-                <a href="" class="Article__Link">
-                    <img src="../Imagenes/ataque.png" class="Article__Proyects__Imagen">
-                    <h3 class="Article__Title">Enciclopedia de Star Wars</h3>
-                    <p class="Article__Proyects__paragraphy">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate maiores, 
-                        beatae ad aspernatur molestias inventore eaque fugiat amet a illo temporibus iste vel mollitia qui, 
-                        alias saepe quidem, corporis sequi!</p>
-                </a>
-            </article>
-            <article class="Article__Proyects">
-                <a href="" class="Article__Link">
-                    <img src="../Imagenes/ataque.png" class="Article__Proyects__Imagen">
-                    <h3 class="Article__Title">Enciclopedia de Star Wars</h3>
-                    <p class="Article__Proyects__paragraphy">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate maiores, 
-                        beatae ad aspernatur molestias inventore eaque fugiat amet a illo temporibus iste vel mollitia qui, 
-                        alias saepe quidem, corporis sequi!</p>
-                </a>
-            </article>
+        <section class="Section__page">
+            <img src="../Imagenes/J.png" class="Imagen">
+            <p class="Paragraphy">JoSantana0005</p>
+        </section>
+        <section class="Section__about">
+            <h2 class="Title Title__about">ABOUT</h2>
+            <img src="https://images.griddo.universitatcarlemany.com/c/cover/q/95/w/752/h/424.87/p/center/f/jpeg/lenguajes-de-programacion-cuales-son-los-10-mas-utilizados" alt="no se puede ver la imagen" class="Imagen__about" id="ABOUT">
+            <p class="Paragraphy Paragraphy__about">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, dolores earum. Odit reiciendis nesciunt fuga consequatur eaque quasi, maiores ducimus illum voluptatem exercitationem earum modi fugiat mollitia error nemo id!
+            Dolore placeat magnam perspiciatis recusandae velit ducimus itaque ut doloremque! Voluptatibus quia atque soluta, ducimus maxime ratione? Omnis, ea nulla. Veritatis, nemo quo temporibus aspernatur labore amet illo corrupti et?
+            Iusto minus aliquam quibusdam nemo ipsa commodi eveniet tempore laboriosam et magnam. Rem odio ipsum quod dolorem cumque consequatur vitae eius natus molestiae. Delectus esse tenetur dolorem, excepturi earum distinctio.
+            Eos officiis nam ipsa in voluptatum explicabo, a repudiandae et, perferendis vero molestias minus inventore reprehenderit numquam suscipit porro culpa quis, facere dolorem laudantium sint! Accusamus dolor qui doloremque cum.
+            Sapiente voluptatum numquam hic, animi minus provident reprehenderit illo dolorem, totam odit, error et sequi laudantium iure temporibus tempora iste? Labore aperiam in nam voluptas id dolores rem non molestias!</p>
         </section>
     </main>
 </body>
