Update on my portfolio

--- a/Portafolio/index.html
+++ b/Portafolio/index.html
@@ -45,6 +45,22 @@
             Eos officiis nam ipsa in voluptatum explicabo, a repudiandae et, perferendis vero molestias minus inventore reprehenderit numquam suscipit porro culpa quis, facere dolorem laudantium sint! Accusamus dolor qui doloremque cum.
             Sapiente voluptatum numquam hic, animi minus provident reprehenderit illo dolorem, totam odit, error et sequi laudantium iure temporibus tempora iste? Labore aperiam in nam voluptas id dolores rem non molestias!</p>
         </section>
+        <section class="Section__hability">
+            <h2 class="Title Title__hability">My habilitys</h2>
+            <p class="Paragraphy Paragraphy__hability">my programming languages ​​are the following:</p>
+            <ul class="List List__hability">
+                <li class="List__cont List__Hability"><a href="" class=" Link__hability"><img src="https://cdn.icon-icons.com/icons2/2699/PNG/512/python_logo_icon_168886.png" 
+                    alt="No se puede ver la imagen" class="Imagen__List Imagen__hability"></a></li>
+                <li class="List__cont List__Hability"><a href="" class="Link__hability"><img src="https://i.postimg.cc/6QDwYKr2/java.png" 
+                    alt="No se puede ver la imagen" class="Imagen__List Imagen__hability"></a></li>
+                <li class="List__cont List__Hability"><a href="" class=" Link__hability"><img src="https://cdn-icons-png.flaticon.com/512/174/174854.png" alt="No se puede ver la imagen" class="Imagen__List Imagen__hability"></a></li>
+                <li class="List__cont List__Hability"><a href="" class=" Link__hability"><img src="https://cdn.worldvectorlogo.com/logos/css-3.svg" alt="No se puede ver la imagen" class="Imagen__List Imagen__hability"></a></li>
+                <li class="List__cont List__Hability"><a href="" class=" Link__hability"><img src="https://i.ibb.co/pKKrwn3/javascript-js-icon-2048x2048-nyxvtvk0.png" alt="No se puede ver la imagen" class="Imagen__List Imagen__hability"></a></li>
+            </ul>
+        </section>
+        <section class="Section__Project">
+            <h2 class="Title">PROJECT</h2>
+        </section>
     </main>
 </body>
 </html>
