the star wars main page is improved

--- a/Star wars/Code/index.html
+++ b/Star wars/Code/index.html
@@ -1,92 +1,48 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="estilo.css"/>
     <title>Star Wars Enciclopedia</title>
     <link rel="icon" href="../../Imagenes/logo.png" type="image/png">
+    <link rel="stylesheet" href="estilo.css"/>
+    <link rel="stylesheet" href="../font/font.css">
 </head>
 <body>
-    <header class="Header__page">
-        <h1 class="Title">Enciclopedia Star Wars</h1>
-        <p class="Paragraphy">Este sitio esta dedicado a un abrir de boca de <span id="Palabra">Star Wars</span>, donde
-        se resalta los detalles de las peliculas como los personajes y la historia..</p>
-        <nav class="Navigation__bar">
-            <ul class="Navigation__bar__list">
-                <li id="List__content"><a href="../What is it about/index.html" class="Navigation__bar__Link">What is it about?</a></li><hr>
-                <li id="List__content"><a href="../Characters/index.html" class="Navigation__bar__Link">Characters</a></li><hr>
-                <li id="List__content"><a href="../History/index.html" class="Navigation__bar__Link">History</a></li><hr>
-                <li id="List__content"><a href="maiton: joseasantana05@gmail.com" class="Navigation__bar__Link">Help</a></li>
+    <header class="Header">
+        <h1 class="Title">Star Wars</h1>
+        <nav class="Navigator__bar">
+            <ul class="Navigator__bar List">
+                <li class="List List__cont"><a href="" class="Link List__cont">HOME</a></li>
+                <li class="List List__cont"><a href="" class="Link List__cont">ABOUT</a></li>
+                <li class="List List__cont"><a href="" class="Link List__cont">HISTORY</a></li>
+                <li class="List List__cont"><a href="" class="Link List__cont">CHARACTERS</a></li>
             </ul>
         </nav>
     </header>
-    <h2 class="Title__page">Detalles de las Peliculas</h2>
-    <main class="Main__page">
+    <main class="Main">
+        <section class="Section__page">
+            <h2 class="Title Title--Section">About</h2>
+            <a href="https://en.wikipedia.org/wiki/Star_Wars" class="Link--section"><img src="https://png.pngtree.com/thumb_back/fh260/background/20230325/pngtree-future-star-wars-star-science-and-technology-character-silhouette-image_2090951.jpg" 
+            alt="No se puede ver la imagen" class="Imagen__section"></a>
+            <p class="Paragraphy">Star Wars es una franquicia de medios de comunicación estadounidense de ópera espacial épica creada por George Lucas , que comenzó con la película homónima de 1977  
+                ​​y rápidamente se convirtió en un fenómeno de la cultura pop mundial. La franquicia se ha expandido a varias películas y otros medios , incluidas series de televisión , videojuegos , novelas , cómics , atracciones de parques temáticos y áreas temáticas , que comprenden un universo ficticio que lo abarca todo. Star Wars es una de las franquicias de medios de comunicación más taquilleras de todos los tiempos.
+                La película original de 1977, subtitulada retroactivamente Episodio IV: Una nueva esperanza , fue seguida por las secuelas Episodio V: El Imperio Contraataca (1980) y Episodio VI: El Retorno del Jedi (1983), formando la trilogía original de Star Wars . Lucas luego regresó a la serie para escribir y dirigir una trilogía de precuelas , compuesta por Episodio I: La amenaza fantasma (1999), Episodio II: El ataque de los clones (2002) y Episodio III: La venganza de los Sith (2005). En 2012, Lucas vendió su compañía de producción a Disney , renunciando a su propiedad de la franquicia. Esto dio lugar a una trilogía de secuelas , compuesta por Episodio VII: El despertar de la fuerza (2015), Episodio VIII: Los últimos Jedi (2017) y Episodio IX: El ascenso de Skywalker (2019).</p> 
+        </section>
+        <section class="Section__page">
+            <h2 class="Title Title--Section">Origin</h2>
+            <a href="https://www.centrocp.com/star-wars-una-mirada-educativa/#:~:text=Originalmente%2C%20Star%20Wars%20fue%20concebida,las%20aventuras%20de%20aquel%20personaje." class="Link--section"><img src="https://i.blogs.es/1da08b/1366_2000-9-/1366_2000.jpeg" alt="No se puede ver la imagen" class="Imagen__section"></a>
+            <p class="Paragraphy Paragraphy--origin">Hablar de los orígenes de la saga de La Guerra de las Galaxias es hablar de george Lucas. George Walton Lucas Jr. nació el 14 de mayo de 1944 en Modesto, California, donde asistió al Modesto Junior College antes de estudiar en la escuela de cine de la Universidad de Southern California. Como estudiante de esta universidad, Lucas hizo varios cortos, incluido Electronic Labyrinth: THX 11384EB, el cual le dio su primer premio en el Festival Nacional de Estudiantes de Cine 1967-68. En 1967, la Warner Brothers le otorgó una beca al ver su trabajo en Finian's Rainbow, dirigida por Francis Ford Coppola. Durante el año siguiente, Lucas trabajó como asistente de Coppola en The Rain People y realizó un corto llamado Film Maker sobre la realización de dicha película. Lucas y Coppola compartían la visión del comienzo de una compañía de producción de películas independiente donde una comunidad de escritores, productores y directores pudieran compartir ideas. En 1969, los dos directores se fueron a Northern California, donde ellos fundaron American Zoetrope. El primer proyecto de la compañía fue la versión completa del corto de Lucas THX 1138. En 1971, 
+                Coppola apostó por la producción de El Padrino, y Lucas formó su propia compañía, Lucasfilm Ltd.</p>
+        </section>
+        <section class="Section__page">
+            <h2 class="Title Title--Section">CHARACTERS</h2>
+            <a href="https://cl.pinterest.com/victor486/star-wars-personajes/" class="Link--section"><img src="../../Imagenes/imagen.png" alt="No se puede ver la imagen" class="Imagen__section"></a>
+            <p class="Paragraphy Paragraphy--origin">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis voluptate velit quas animi deleniti nesciunt mollitia numquam laudantium vitae tempora minima quidem amet hic in assumenda quis, labore natus nostrum!
+            Consequuntur, quos maxime illo optio minima vero modi, minus nam obcaecati, rem nostrum perferendis facere quasi eveniet ducimus. Temporibus doloribus ipsum iure, labore alias sunt eveniet natus dignissimos qui quo.
+            Itaque omnis animi possimus voluptatem maiores impedit, rerum incidunt laudantium sapiente voluptate eligendi quo tempore nesciunt, consectetur beatae quae minima tenetur! Blanditiis ut libero dignissimos sed esse ducimus maiores totam?Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste optio sint, laudantium quod ad accusamus error nostrum expedita aperiam, quisquam eum? Error quae blanditiis voluptatum assumenda explicabo, exercitationem corporis necessitatibus.
+            Itaque quae ipsum natus architecto consequuntur quas quam id quibusdam, delectus asperiores numquam voluptates possimus in. Atque harum distinctio laborum esse at quam illo eius assumenda laudantium? Tempore, reprehenderit maiores?
+            Hic ipsam laudantium eius quis obcaecati, officia possimus veritatis doloremque voluptas? Odit fugiat vero veniam eaque, vel libero blanditiis harum deleniti, at ullam deserunt dolore incidunt ratione sed, atque optio?lorem</p>
+        </section>
 
-        <a href="" class="Pelicula__Link">
-        <section class="Section__page">
-            <img src="../../Imagenes/amenaza.png" alt="No se puede ver la imagen" class="Imagen__peli">
-            <p class="Paragraphy__page">En el año 32 antes de la Batalla de Yavin (es decir, 32 años antes de Una Nueva Esperanza) una disputa entre la Federación de Comercio y la República Galáctica causada por los impuestos sobre las rutas comerciales de los Territorios del Borde Exterior, 
-                ha llevado a la Federación de Comercio a imponer un bloqueo comercial al planeta Naboo.
-                Entonces, el Canciller Supremo Valorum nombra en secreto a dos caballeros Jedi: Obi-Wan Kenobi y Qui-Gon Jinn 
-                como embajadores a la nave insignia de la Federación de Comercio, la Saak'ak, con el fin de reunirse con el Virrey Nute 
-                Gunray y así obligarlo a resolver la disputa. Ignoran, sin embargo, que el virrey está aliado con el malvado Darth Sidious, 
-                que en secreto le ordena invadir Naboo y eliminar a los caballeros Jedi en cuanto lleguen.</p>
-        </section></a>
-
-        <a href="" class="Pelicula__Link">
-        <section class="Section__page">
-            <img src="../../Imagenes/ataque.png" alt="No se puede ver la imagen" class="Imagen__peli">
-            <p class="Paragraphy__page">En el año 32 antes de la Batalla de Yavin (es decir, 32 años antes de Una Nueva Esperanza) una disputa entre la Federación de Comercio y la República Galáctica causada por los impuestos sobre las rutas comerciales de los Territorios del Borde Exterior, 
-                ha llevado a la Federación de Comercio a imponer un bloqueo comercial al planeta Naboo.
-                Entonces, el Canciller Supremo Valorum nombra en secreto a dos caballeros Jedi: Obi-Wan Kenobi y Qui-Gon Jinn 
-                como embajadores a la nave insignia de la Federación de Comercio, la Saak'ak, con el fin de reunirse con el Virrey Nute 
-                Gunray y así obligarlo a resolver la disputa. Ignoran, sin embargo, que el virrey está aliado con el malvado Darth Sidious, 
-                que en secreto le ordena invadir Naboo y eliminar a los caballeros Jedi en cuanto lleguen.</p>
-        </section></a>
-
-        <a href="" class="Pelicula__Link">
-        <section class="Section__page">
-            <img src="../../Imagenes/venganza.png" alt="No se puede ver la imagen" class="Imagen__peli">
-            <p class="Paragraphy__page">En el año 32 antes de la Batalla de Yavin (es decir, 32 años antes de Una Nueva Esperanza) una disputa entre la Federación de Comercio y la República Galáctica causada por los impuestos sobre las rutas comerciales de los Territorios del Borde Exterior, 
-                ha llevado a la Federación de Comercio a imponer un bloqueo comercial al planeta Naboo.
-                Entonces, el Canciller Supremo Valorum nombra en secreto a dos caballeros Jedi: Obi-Wan Kenobi y Qui-Gon Jinn 
-                como embajadores a la nave insignia de la Federación de Comercio, la Saak'ak, con el fin de reunirse con el Virrey Nute 
-                Gunray y así obligarlo a resolver la disputa. Ignoran, sin embargo, que el virrey está aliado con el malvado Darth Sidious, 
-                que en secreto le ordena invadir Naboo y eliminar a los caballeros Jedi en cuanto lleguen.</p>
-        </section></a>
-
-        <a href="" class="Pelicula__Link">
-        <section class="Section__page">
-            <img src="../../Imagenes/esperanza.png" alt="No se puede ver la imagen" class="Imagen__peli">
-            <p class="Paragraphy__page">En el año 32 antes de la Batalla de Yavin (es decir, 32 años antes de Una Nueva Esperanza) una disputa entre la Federación de Comercio y la República Galáctica causada por los impuestos sobre las rutas comerciales de los Territorios del Borde Exterior, 
-                ha llevado a la Federación de Comercio a imponer un bloqueo comercial al planeta Naboo.
-                Entonces, el Canciller Supremo Valorum nombra en secreto a dos caballeros Jedi: Obi-Wan Kenobi y Qui-Gon Jinn 
-                como embajadores a la nave insignia de la Federación de Comercio, la Saak'ak, con el fin de reunirse con el Virrey Nute 
-                Gunray y así obligarlo a resolver la disputa. Ignoran, sin embargo, que el virrey está aliado con el malvado Darth Sidious, 
-                que en secreto le ordena invadir Naboo y eliminar a los caballeros Jedi en cuanto lleguen.</p>
-        </section></a>
-
-        <a href="" class="Pelicula__Link">
-        <section class="Section__page">
-            <img src="../../Imagenes/imperio.jpg" alt="No se puede ver la imagen" class="Imagen__peli">
-            <p class="Paragraphy__page">En el año 32 antes de la Batalla de Yavin (es decir, 32 años antes de Una Nueva Esperanza) una disputa entre la Federación de Comercio y la República Galáctica causada por los impuestos sobre las rutas comerciales de los Territorios del Borde Exterior, 
-                ha llevado a la Federación de Comercio a imponer un bloqueo comercial al planeta Naboo.
-                Entonces, el Canciller Supremo Valorum nombra en secreto a dos caballeros Jedi: Obi-Wan Kenobi y Qui-Gon Jinn 
-                como embajadores a la nave insignia de la Federación de Comercio, la Saak'ak, con el fin de reunirse con el Virrey Nute 
-                Gunray y así obligarlo a resolver la disputa. Ignoran, sin embargo, que el virrey está aliado con el malvado Darth Sidious, 
-                que en secreto le ordena invadir Naboo y eliminar a los caballeros Jedi en cuanto lleguen.</p>
-        </section></a>
-        
-        <a href="" class="Pelicula__Link">
-        <section class="Section__page">
-            <img src="../../Imagenes/regreso.png" alt="No se puede ver la imagen" class="Imagen__peli">
-            <p class="Paragraphy__page">En el año 32 antes de la Batalla de Yavin (es decir, 32 años antes de Una Nueva Esperanza) una disputa entre la Federación de Comercio y la República Galáctica causada por los impuestos sobre las rutas comerciales de los Territorios del Borde Exterior, 
-                ha llevado a la Federación de Comercio a imponer un bloqueo comercial al planeta Naboo.
-                Entonces, el Canciller Supremo Valorum nombra en secreto a dos caballeros Jedi: Obi-Wan Kenobi y Qui-Gon Jinn 
-                como embajadores a la nave insignia de la Federación de Comercio, la Saak'ak, con el fin de reunirse con el Virrey Nute 
-                Gunray y así obligarlo a resolver la disputa. Ignoran, sin embargo, que el virrey está aliado con el malvado Darth Sidious, 
-                que en secreto le ordena invadir Naboo y eliminar a los caballeros Jedi en cuanto lleguen.</p>
-        </section></a>
     </main>
 </body>
 </html>
